{
    "name": "InputAction",
    "maps": [
        {
            "name": "Game",
            "id": "b176da31-ef29-4d88-a8e4-b7d3b39f2693",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "40d9fb0e-ac10-4edd-953a-b8640b8ec99f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PerformAction",
                    "type": "Button",
                    "id": "34ea8475-ba3a-468a-a8dd-94b90abc8363",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "c8daadbd-7be2-4025-8a94-c91835bce4ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8934fa06-9c4d-4b00-97ba-0b9f8cbb5fc0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b524f0f7-8344-4e6f-a59e-a5835f3ea7db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c525ed0-2661-469f-9ec8-9df08ece5206",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}